crates/moire-source-context/src/snapshots/moire_source_context__tests__async_fn_multiline_params.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async establish_as_acceptor(&mut self, settings, metadata) -> Result<Handle>
# scope 6..8

   6  |     let handle = session
   7  |         .establish(self.root_settings, self.metadata)
   8  |         .await?;
