crates/moire-source-context/src/snapshots/moire_source_context__tests__channel_creation.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn setup()
# scope 2..2

   2 >|     let (tx_a, rx_b) = mpsc::channel("memory_link.a→b", buffer);
