crates/moire-source-context/src/snapshots/moire_source_context__tests__channel_creation.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn setup()
# scope 2..3

   2 |     let (tx_a, rx_b) = mpsc::channel("memory_link.a→b", buffer);
   3 |     let (a, b) = memory_link_pair(64);
