crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_closure.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn outer()
# scope 4..6

   4 |     let handler = || {
   5 |         single_call()
   6 |     };
