crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_empty_fn.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# foo()
# scope 8..8

   8 >| }
