crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_method_in_impl.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# Foo::fn getter(&self) -> u32
# scope 11..11

  11  |         self.value
