crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_method_in_impl.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# Foo::fn getter(&self) -> u32
# scope 11..11

  11  |         self.value
