crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_multi_stmt_fn.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# many()
# scope 6..6

   6  |     let e = 5;
