crates/moire-source-context/src/snapshots/moire_source_context__tests__closing_brace_multi_stmt_fn.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn many()
# scope 5..6

   5  |     let d = 4;
   6  |     let e = 5;
